--- a/build.gradle
+++ b/build.gradle
@@ -13,19 +13,37 @@ ext {
 	
 	/* Load path to JDK from gradle.properties. */
 	javaHome = JAVA_HOME
+	
+	mainClass = 'goa.systems.esp.EspServer'
+	
+	junitvers = '5.7.0'
 }
+
+mainClassName = mainClass
+version = '0.0.1'
 
 repositories {
     jcenter()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+
+	implementation 'org.slf4j:slf4j-api:1.7.30'
+	implementation 'ch.qos.logback:logback-core:1.2.3'
+	implementation 'ch.qos.logback:logback-classic:1.2.3'
+	
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:' + junitvers
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:' + junitvers
 }
 
 test {
     useJUnitPlatform()
+}
+
+jar {
+	manifest {
+		attributes 'Main-Class': mainClass
+	}
 }
 
 task buildresources(type: Exec, group: 'build', description: 'The gcc build task.'){
@@ -37,6 +55,18 @@ task buildresources(type: Exec, group: 'build', description: 'The gcc build task
     environment "PATH", customPath
     
     commandLine 'windres', 'resources.rc', '-O', 'coff', '-o', 'resources.res'
+}
+
+/* Work in progress. */
+task generateJavaC(type: Copy, group: 'build', description: 'The gcc build task.') {
+	from filetree('src/main/c') {
+		include 'java.gen.c'
+        filter{ it.replaceAll('%%MAIN_CLASS%%', 'asdf')}
+    }.files
+	into 'src/main/c'
+	rename { filename ->
+        filename.replace 'java.gen.c', 'java.c'
+    }
 }
 
 task makenativeexec(type: Exec, group: 'build', description: 'The gcc build task.'){
